// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pi orchestration boundary > characterizes the in-house agentx_* tools byte-for-byte with no connector catalogs (regression guard) 1`] = `
[
  {
    "description": "Run repository inspection, editing, build, or test work on the remote AgentX worker. This waits for completion and returns the worker's final response; do not poll or resubmit the task.",
    "name": "agentx_submit_task",
    "parameters": {
      "properties": {
        "prompt": {
          "maxLength": 65536,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
  },
  {
    "description": "Explicitly validate and publish one changed registered repository as a pull request. AgentX opens it as a draft when a check fails, and the result says draft. AgentX itself commits every change in this thread's workspace for the repository, committed or not, into one commit on a new branch, and the result says so when there is nothing to publish. Do not run agentx_submit_task or agentx_follow_up first to inspect, commit or summarise the changes. Write the title and body from what this thread already says the work changed; when it says nothing, use a short title naming the repository. Call this only when the user clearly asks to create or raise a pull request.",
    "name": "agentx_create_pull_request",
    "parameters": {
      "properties": {
        "body": {
          "maxLength": 32768,
          "type": "string",
        },
        "repository": {
          "maxLength": 63,
          "minLength": 1,
          "type": "string",
        },
        "title": {
          "maxLength": 256,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "repository",
        "title",
      ],
      "type": "object",
    },
  },
  {
    "description": "Recovery only: read durable status for a previously interrupted AgentX operation.",
    "name": "agentx_task_status",
    "parameters": {
      "properties": {
        "operationId": {
          "format": "uuid",
          "type": "string",
        },
      },
      "required": [
        "operationId",
      ],
      "type": "object",
    },
  },
  {
    "description": "Recovery only: wait for a previously interrupted operation and retrieve its final remote assistant response.",
    "name": "agentx_task_result",
    "parameters": {
      "properties": {
        "operationId": {
          "format": "uuid",
          "type": "string",
        },
      },
      "required": [
        "operationId",
      ],
      "type": "object",
    },
  },
  {
    "description": "Run a follow-up on the same remote workspace and conversation. This waits for completion and returns the worker's final response; do not poll or resubmit it.",
    "name": "agentx_follow_up",
    "parameters": {
      "properties": {
        "prompt": {
          "maxLength": 65536,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
  },
  {
    "description": "Change an existing AgentX-owned pull request. Actions: edit its title or body; append new workspace commits with a normal fast-forward push; sync by merging the latest base branch into it; close it; reopen a closed, unmerged one; replace it with clean history (the new pull request is created before the original is closed); revert a merged one with a reviewable revert pull request. History is never rebased or force-pushed. Title and body apply only to edit, replace and revert. Call only for the action the user explicitly asked for.",
    "name": "agentx_manage_pull_request",
    "parameters": {
      "properties": {
        "action": {
          "enum": [
            "edit",
            "append",
            "sync",
            "close",
            "reopen",
            "replace",
            "revert",
          ],
          "type": "string",
        },
        "body": {
          "maxLength": 32768,
          "type": "string",
        },
        "pullRequestNumber": {
          "minimum": 1,
          "type": "integer",
        },
        "repository": {
          "maxLength": 63,
          "minLength": 1,
          "type": "string",
        },
        "title": {
          "maxLength": 256,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "repository",
        "pullRequestNumber",
        "action",
      ],
      "type": "object",
    },
  },
]
`;

exports[`pi orchestration boundary > keeps the five tools outside the pull-request lifecycle byte-for-byte (regression guard) 1`] = `
[
  {
    "description": "Run repository inspection, editing, build, or test work on the remote AgentX worker. This waits for completion and returns the worker's final response; do not poll or resubmit the task.",
    "label": "Delegate coding task",
    "name": "agentx_submit_task",
    "parameters": {
      "properties": {
        "prompt": {
          "maxLength": 65536,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
  },
  {
    "description": "Explicitly validate and publish one changed registered repository as a pull request. AgentX opens it as a draft when a check fails, and the result says draft. AgentX itself commits every change in this thread's workspace for the repository, committed or not, into one commit on a new branch, and the result says so when there is nothing to publish. Do not run agentx_submit_task or agentx_follow_up first to inspect, commit or summarise the changes. Write the title and body from what this thread already says the work changed; when it says nothing, use a short title naming the repository. Call this only when the user clearly asks to create or raise a pull request.",
    "label": "Create pull request",
    "name": "agentx_create_pull_request",
    "parameters": {
      "properties": {
        "body": {
          "maxLength": 32768,
          "type": "string",
        },
        "repository": {
          "maxLength": 63,
          "minLength": 1,
          "type": "string",
        },
        "title": {
          "maxLength": 256,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "repository",
        "title",
      ],
      "type": "object",
    },
  },
  {
    "description": "Recovery only: read durable status for a previously interrupted AgentX operation.",
    "label": "Remote task status",
    "name": "agentx_task_status",
    "parameters": {
      "properties": {
        "operationId": {
          "format": "uuid",
          "type": "string",
        },
      },
      "required": [
        "operationId",
      ],
      "type": "object",
    },
  },
  {
    "description": "Recovery only: wait for a previously interrupted operation and retrieve its final remote assistant response.",
    "label": "Remote task result",
    "name": "agentx_task_result",
    "parameters": {
      "properties": {
        "operationId": {
          "format": "uuid",
          "type": "string",
        },
      },
      "required": [
        "operationId",
      ],
      "type": "object",
    },
  },
  {
    "description": "Run a follow-up on the same remote workspace and conversation. This waits for completion and returns the worker's final response; do not poll or resubmit it.",
    "label": "Remote follow-up",
    "name": "agentx_follow_up",
    "parameters": {
      "properties": {
        "prompt": {
          "maxLength": 65536,
          "minLength": 1,
          "type": "string",
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
  },
]
`;
